[tool.poetry]
name = "project6"
version = "0.1.0"
description = ""
authors = ["Nurs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
jinja2 = "^3.1.6"
uvicorn = "^0.34.0"
starlette = "^0.46.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jwt = "^1.3.1"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
bcrypt = "^4.3.0"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
